[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[project]
name = "logging-yaml"
version = "0.1.0.post1"
description = "logging-yaml"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Rocky Haotian Du", email = "rocky_d@yeah.net" }]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["pyyaml>=6.0.3"]

[project.urls]
Homepage = "https://pypi.org/project/logging-yaml/"
Repository = "https://github.com/rocky-d/logging-yaml"

[dependency-groups]
dev = ["python-dotenv>=1.0.1", "ruff>=0.15.0", "ty>=0.0.15"]
